tests/machine/x/java/record_assign.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:41:40Z
// record_assign.mochi
import java.util.*;

class Counter {
    int n;
    Counter(int n) {
        this.n = n;
    }
    @Override public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof Counter other)) return false;
        return Objects.equals(this.n, other.n);
    }
    @Override public int hashCode() {
        return Objects.hash(n);
    }
}
public class RecordAssign {
    static Counter c = new Counter(0);
    static void inc(Object c) {
        c.n = ((Number)((Map<?,?>)c).get("n")).doubleValue() + 1;
    }
    public static void main(String[] args) {
    inc(c);
    System.out.println(c.n);
    }
}
